# pysamlds

./: README.md  setup.cfg
pysamlds/: app.py  config.py  discovery.py  main.py
pysamlds/templates/: index.html
