[metadata]
name = pysamlds
summary = Python & Flask re-implementation of shibboleth-ds
description-file =
    README.md
author = Kristi Nikolla
author-email = knikolla@bu.du
home-page = https://github.com/knikolla/pysamlds
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    pysamlds
    pysamlds.templates
